# llm-ai-assistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  walkthrough.ipynb
.agents/skills/document-qa/: SKILL.md
.github/workflows/: codeql.yml  dependency-audit.yml  docker-publish.yml  tests.yml
docs/: framework-adapter-strategy.md
src/: DocumentQA.py  __init__.py  ai_loop_engine.py  ai_loop_runtime.py  answer_loop.py  app.py  context_providers.py  document_config.py  document_ingestion.py  document_text.py  env_file.py  golden_eval.py  loop_engine.py  loop_eval.py  loop_export.py  model_adapters.py  native_runtime.py  ollama_model_eval.py  retrieval.py  retrieval_types.py  runtime_config.py  thread_store.py  web_contract.py  web_search.py  worker_huggingface.py
src/adapters/: __init__.py  base.py  langgraph_manifest.py  openai_trace.py  redaction.py
src/static/: script.js
src/web_static/: app.js  index.html  styles.css
tests/: conftest.py  frontend_harness.mjs  test_app.py  test_document_qa.py  test_env_file.py  test_golden_document_eval.py  test_langgraph_manifest_adapter.py  test_loop_engine.py  test_loop_eval.py  test_loop_export.py  test_native_runtime.py  test_ollama_model_eval.py  test_openai_trace_adapter.py  test_packaging_metadata.py  test_thread_store.py
