[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-loop-engine"
version = "0.1.0"
description = "Local-first engine for inspecting and hardening AI answer loops."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
keywords = ["ai", "agents", "loop-engineering", "rag", "ollama", "gradio"]
dependencies = [
  "accelerate==1.13.0",
  "aiohttp==3.14.1",
  "charset-normalizer==3.4.4",
  "docx2txt==0.9",
  "faiss-cpu==1.13.2",
  "filelock==3.24.2",
  "gradio==6.15.2",
  "huggingface-hub==1.5.0",
  "langchain==1.3.10",
  "langchain-core==1.4.8",
  "langchain-huggingface==1.2.1",
  "langgraph-checkpoint==4.1.1",
  "langchain-text-splitters==1.1.2",
  "langsmith==0.8.18",
  "marshmallow==3.26.2",
  "numpy==2.3.4",
  "orjson==3.11.7",
  "pillow==12.2.0",
  "pydantic==2.11.10",
  "pypdf==6.13.3",
  "python-multipart==0.0.32",
  "sentence-transformers==5.3.0",
  "torch==2.12.1",
  "transformers==5.4.0",
  "urllib3==2.7.0",
]

[project.urls]
Repository = "https://github.com/dtkmn/ai-loop-engine"
Issues = "https://github.com/dtkmn/ai-loop-engine/issues"

[project.scripts]
ai-loop-engine = "src.app:main"
ai-loop-eval = "src.loop_eval:main"
ai-loop-ollama-eval = "src.ollama_model_eval:main"

[dependency-groups]
dev = [
  "pip-audit==2.10.1",
  "pytest==9.0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
